<resources>
    <string name="app_name">QR 114</string>
    <string name="more">More</string>
    <string name="allow">Allow</string>
    <string name="ban">Do not show again</string>
    <string name="finish">Finish</string>
    <string name="it_is_ok">OK!</string>
    <string name="i_known">Roger!</string>
    <string name="app_is_running">Application is running.</string>
    <string name="none_data">No data</string>
    <string name="close">Close</string>
    <string name="no_data">No content found</string>
    <string name="back">back</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="double_tap_to_exit">Press again to exit the key</string>
    <string name="exit">exit</string>
    <string name="mobile_network_tip">Using a mobile network</string>
    <string name="network_error_tip">There seems to be something wrong with the network. Please check the network</string>
    <string name="none_network_tip">The network is not open, please open the network</string>
    <string name="ok">YES</string>
    <string name="tips">Message</string>
    <string name="to_setting">go setting</string>
    <string name="qr114" translatable="false">QR 114</string>
    <string name="new_version_available" translatable="false">New Version Available</string>
    <string name="update_file_ready" translatable="false">Update File Ready</string>
    <string name="download_completed" translatable="false">Download Complete</string>
    <string name="login_title">Log In</string>
    <string name="login_subtitle">Enter the email and password to\nSign in</string>
    <string name="login_button">Log In</string>
    <string name="login_nav_to_signup">Don\'t have an account? <b>Sign Up</b></string>
    <string name="signup_title">Product Registration</string>
    <string name="signup_subtitle">Enter the QR114 serial number exactly as shown in your devices user manual.</string>
    <string name="email_hint_msg" >Enter valid email address</string>
    <string name="patent_text" >Device Patent Pending xxxxxxxxxxxxxxxx</string>
    <string name="copyright_text" >© 2025 RHKCL</string>
    <string name="repassword_hint" >Re-Password</string>
    <string name="forgot_password_hint_msg" >Forgot Password?</string>
    <string name="reset_password" >Reset Password</string>
    <string name="back_to_login" >Back to Login</string>
    <string name="contact_upport" >Contact Support</string>
    <string name="reset_password_subtitle" >Enter your details to reset your password</string>
    <string name="serial_number_hint">Serial Number</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Register</string>
    <string name="signup_nav_to_login"><b>Already have an account?</b></string>
    <string name="terms_and_conditions">By proceeding, I confirm that I have read and agree to the <b>Licensing, Terms and Conditions</b>, and <b>Privacy Policy</b> of RigidMeds Canada INC.</string>
    <string name="password_hint_msg">The password must be at least 8 characters long</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_password">Update Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancel_text">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="rename_device">Re-Name Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="change_name_guide_text">Use: Letters (A-Z), numbers (0-9), paces, - _ . ( ). Avoid: spaces, special characters </string>
    <string name="no_network">No network connection, please check your network</string>
    <string name="network_exception">Network Error</string>
    <string name="network_exception_tips">Please check your network connection and try again</string>
    <string name="open_gpg_tip">GPS permission required, please allow access to location service</string>
    <string name="permissions_tips_01">In order to use this app normally, please</string>
    <string name="permission_contacts">Allow read and write contacts</string>
    <string name="permission_mic">Allow access to microphone</string>
    <string name="permission_read_phone_state">Allow access to phone information</string>
    <string name="permission_location">Allow access to location</string>
    <string name="permission_storage">Allow read and write files</string>
    <string name="permission_bluetooth">Allow access to Bluetooth</string>
    <string name="permission_phone_settings">Allow changing phone settings</string>
    <string name="permissions_tips_02">Please open system settings and grant this app</string>
    <string name="permission">permission</string>
    <string name="first_connect_device">Please connect the device first</string>
    <string name="unconnected_device">No Device Connected</string>
    <string name="unconnected_device_tips">No device connected, please connect or add device first</string>
    <string name="connectable_devies">Devices for connect</string>
    <string name="disconnect_device">Disconnect the device</string>
    <string name="msg_read_file_err_reading">Device busy, please try again</string>
    <string name="msg_read_file_err_offline">Device offline</string>
    <string name="msg_call_tip">Calling in progress&#8230;</string>
    <string name="no_support_reverberation">Reverb is not support on current device</string>
    <string name="bt_connecting">Connecting</string>
    <string name="device_status_unconnected">Disconnected</string>
    <string name="device_status_connected">Connected</string>
    <string name="device_status_using">Current in use</string>
    <string name="device_status_mandatory_upgrade">Update required</string>
    <string name="connect_device">Connect a device</string>
    <string name="connect_tip">Connection</string>
    <string name="device_connecting">Connecting&#8230;</string>
    <string name="bt_connect_failed">Failed to connect</string>
    <string name="device_status_reconnect">Reconnecting</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="user_agreement">User agreement</string>
    <string name="agree_with">I agree with</string>
    <string name="dialog_tips">Reminder</string>
    <string name="user_service_tips">\t\tWelcome to use %1$s APP.When you use it, you need to connect to the data network or WLAN operator. Please consult the local operator for the traffic cost.We attach great importance to your privacy protection and personal information protection.</string>
    <string name="user_service_tips2">Please read “User agreement” and “Privacy policy” carefully before you use %1$s APP. You can use our service after you agree and accept all the terms.</string>
    <string name="privacy_policy_name">“Privacy policy”</string>
    <string name="user_service_name">“User agreement”</string>
    <string name="and">and</string>
    <string name="agree_and_use">Agree and continue</string>
    <string name="not_agree_and_exit">Disagree and exit</string>
    <string name="tab_multimedia">Media</string>
    <string name="tab_home">Home</string>
    <string name="tab_logout">Logout</string>
    <string name="tab_eq">Equalizer</string>
    <string name="tab_device">Device</string>
    <string name="switch_classic_device_tips">The current audio source output device [%1$s] is inconsistent with the device [%2$s] in use. Please switch the output  [%3$s] to ensure the user experience</string>
    <string name="add_device">Add New Device</string>
    <string name="my_devices">My Devices</string>
    <string name="pack_up">Less Info</string>
    <string name="device_connecting_tips">Connecting, please wait&#8230;</string>
    <string name="bluetooth_not_enable">Bluetooth is OFF</string>
    <string name="connect_device_over_limit">Reach maximum Bluetooth devices, please disconnect unwanted devices at system setting</string>
    <string name="background_show_activity_failed_tips">BBackground activity (pop-up window) permission denied, please grant permission</string>
    <string name="switch_device_tips">CDevice switch successful.</string>
    <string name="device_not_using">This device is currently not in use</string>
    <string name="device_charging_bin">%1$sCharging case</string>
    <string name="connect_history_failed_tips">Device not found:[%1$s]</string>
    <string name="multi_media_local">Local Media</string>
    <string name="multi_media_usb_drive">USB Drive</string>
    <string name="multi_media_sd_card">SD Card</string>
    <string name="multi_media_fm_launch">FM Transmitter</string>
    <string name="multi_media_fm_receive">FM Receiver</string>
    <string name="multi_media_line_in">AUX</string>
    <string name="multi_media_light_settings">Light Effects</string>
    <string name="multi_media_alarm">Alarm</string>
    <string name="multi_media_search_device">Find My Devices</string>
    <string name="multi_media_net_radio">Online Radio</string>
    <string name="multi_media_sound_card">Karaoke</string>
    <string name="none_music_data">Files Loading...</string>
    <string name="song_list_top_all_song">All Music</string>
    <string name="song_list_top_song_num">(Total %1$d Songs)</string>
    <string name="current_version">Current version</string>
    <string name="local_music_none">No local music file found</string>
    <string name="back_to_root">Now in root directory</string>
    <string name="device_music">Music in device</string>
    <string name="switch_mode_success">Switched to %1$s Mode </string>
    <string name="msg_read_file_err_beyond_max_depth">Beyond readable depth</string>
    <string name="sd_card">SD Card</string>
    <string name="udisk">USB Drive</string>
    <string name="none_id3_music_data">Fail to obtain ID3 information</string>
    <string name="other_music_player">(from other music player app)</string>
    <string name="search_forward">search forward</string>
    <string name="search_all">search all</string>
    <string name="search_backward">search backward</string>
    <string name="freq_point_collect">Save channel</string>
    <string name="freq_point_manage">Manage channel</string>
    <string name="net_radio">Online Radio</string>
    <string name="freq_point_collect_success">Channel Saved</string>
    <string name="freq_point_collect_existed">Saved</string>
    <string name="freq_point">Frequency</string>
    <string name="searching">Searching for channels&#8230;</string>
    <string name="fm_value_no_change">FM Frequency unchanged</string>
    <string name="fm_range">Frequency range 87.5~108.0MHz</string>
    <string name="fm_only_one_decimal">Frequency is accurate to one decimal place</string>
    <string name="fm_no_decimal">Null on decimal place</string>
    <string name="setting">Setting</string>
    <string name="named">Name</string>
    <string name="device_name_over_limit">Device name too long, limit is %1$d characters</string>
    <string name="not_support_tips">Feature not yet supported</string>
    <string name="tip_empty_device_name">Name should not be empty</string>
    <string name="tip_same_device_name">Device name unchanged</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="english">English</string>
    <string name="indonesian" translatable="false">Indonesian</string>
    <string name="turkish" translatable="false">Turkish</string>
    <string name="malay" translatable="false">Malay</string>
    <string name="arabic" translatable="false">Arabic</string>
    <string name="japanese">日本語</string>
</resources>